A11y: Contrast issue on empty list / role presentation missing

--- a/ui/apps/themes/components/links.less
+++ b/ui/apps/themes/components/links.less
@@ -150,7 +150,7 @@ ul.io-ox-inline-links + header {
         color: #ccc;
         &.empty {
             font-size: 14px;
-            color: #888;
+            color: #767676;
             font-weight: normal;
         }
         b {
